# bug-ghc-link

./: bug.cabal  cabal.project  flake.nix
src/: Bug.hs
