cabal-version:       3.0
name:                bug
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            GHC Bug example (native link + plugin)
description:         GHC Bug example (native link + plugin).
Homepage:            http://github.com/blackheaven/bug-ghc-link
tested-with:         GHC==9.2.3

library
  default-language:   Haskell2010
  build-depends:
      base == 4.*
    , polysemy
    , polysemy-plugin
    , nfc
  hs-source-dirs: src
  exposed-modules:
      Bug
  other-modules:
      Paths_bug
  autogen-modules:
      Paths_bug
  -- default-extensions:
  --     DataKinds
  --     DefaultSignatures
  --     DeriveAnyClass
  --     DeriveGeneric
  --     DerivingStrategies
  --     DerivingVia
  --     DuplicateRecordFields
  --     FlexibleContexts
  --     GADTs
  --     GeneralizedNewtypeDeriving
  --     KindSignatures
  --     LambdaCase
  --     OverloadedLists
  --     OverloadedStrings
  --     RankNTypes
  --     RecordWildCards
  --     ScopedTypeVariables
  --     TypeApplications
  --     TypeFamilies
  --     TypeOperators
  -- ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
